--- a/pt-BR/usage/index.html
+++ b/pt-BR/usage/index.html
@@ -1,10 +1,10 @@
 ---
 lang: pt-BR
 layout: default
-meta_title: How to Use Ghost - Ghost Docs
-meta_description: An in depth guide to using the Ghost blogging platform. Got Ghost but not sure how to get going? Start here!
-heading: Using Ghost
-subheading: Finding your way around, and getting set up the way you want
+meta_title: Como Usar o Ghost - Ghost Docs
+meta_description: Um guia mais a fundo para usar a plataforma de blog Ghost. Escolheu o Ghost mas não sabe por onde começar? Comece aqui!
+heading: Usando o Ghost
+subheading: Encontrando seu caminho, e configurando do jeito que você quer
 chapter: usage
 next_section: configuration
 ---
@@ -16,9 +16,9 @@ next_section: configuration
 
         <section id="content" class="col-lg-9">
 
-            <h2 id="overview">Overview</h2>
+            <h2 id="overview">Visão Geral</h2>
 
-            <p>Hopefully at this point you've got Ghost installed and running, and you're ready to get blogging. The following sections are going to walk you through absolutely everything you need to know about Ghost, so that you are familiar with everything, and set up exactly how you want to be.</p>
+            <p>Provavelmente nesse ponto você já tenha o Ghost instalado e executando, e você está pronto para blogar. The following sections are going to walk you through absolutely everything you need to know about Ghost, so that you are familiar with everything, and set up exactly how you want to be.</p>
 
             <h3>First run</h3>
 
