Corrects the sentence that translated the name of the forever software by mistake.

--- a/pt-BR/usage/configuration.html
+++ b/pt-BR/usage/configuration.html
@@ -47,7 +47,7 @@ next_section: settings
 
             <p><code>NODE_ENV=production node index.js</code></p>
 
-            <p>Ou se você normalmente sempre usar:</p>
+            <p>Ou se você normalmente usa o <i>forever</i>:</p>
 
             <p><code>NODE_ENV=production forever start index.js</code></p>
 
