Correct the title

--- a/pt-BR/usage/writing.html
+++ b/pt-BR/usage/writing.html
@@ -18,7 +18,7 @@ next_section: faq
 
         <section id="content" class="col-lg-9">
 
-            <h2 id="writing">Escrevendo Artgios</h2>
+            <h2 id="writing">Escrevendo Artigos</h2>
 
             <p>Arigos de blog no Ghost são escritos usando Markdown. O Markdown é uma sintaxe minimalista para marcação de documentos, usando pontuação e caracteres especiais. É uma sintaxe com inteção de previnir a interrupção do fluxo de escrita, permitindo que você se foque no conteúdo, ao invés de como ele se parece.</p>
 
