Correct image URL

--- a/pt-BR/usage/managing.html
+++ b/pt-BR/usage/managing.html
@@ -53,7 +53,7 @@ next_section: writing
             <ol>
                 <li>Clique no ícone das 'Configurações'</li>
                 <li>Prosiga com as atualizações que são necessárias (isso irá ser salvo automaticamente quando você sair dessa área).</li>
-                <img style="max-width:100%;" src="hhttps://s3-eu-west-1.amazonaws.com/ghost-website-cdn/updateSlug.gif">
+                <img style="max-width:100%;" src="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/updateSlug.gif">
             </ol>
 
 
