--- a/pt-BR/installation/windows.html
+++ b/pt-BR/installation/windows.html
@@ -32,10 +32,10 @@ next_section: linux
             <h3>Download & Extract Ghost</h3>
 
             <ul>
-                <li>Log in to <a href="http://ghost.org">http://ghost.org</a>, and then click the blue 'Download Ghost Source Code' button.</li>
-                <li>On the downloads page, press the button to download the latest zip file.</li>
-                <li>Click on the arrow next to the newly downloaded file, and choose 'show in folder'.</li>
-                <li>When the folder opens, right click on the downloaded zip file and choose 'Extract all'.</li>
+                <li>Entre com sua conta no <a href="http://ghost.org">http://ghost.org</a>, e clique no botão azul 'Download Ghost Source Code'.</li>
+                <li>Na página de arquivos, pressione o botão para baiar o último arquivo .zip.</li>
+                <li>Clique na seta próxima ao arquivo mais recente e escolha 'Mostrar na Pasta'.</li>
+                <li>Quando essa pasta abrir, clique com o botão direito no arquivo .zip baixado e escolha 'Extrair tudo.'</li>
             </ul>
 
             <p>Se você ficar perdido, você pode assistir <a href="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/install-ghost-win.gif" title="Install Ghost on Windows Part 1">o processo aqui</a>.</p>
