Slightly improves the sound of the phrase
Melhora um pouco a sonoridade da frase.

--- a/pt-BR/index.html
+++ b/pt-BR/index.html
@@ -17,7 +17,7 @@ meta_title: Iniciando com Ghost
 <div class="bs-masthead">
   <div class="container">
     <h1>O Guia do Ghost</h1>
-    <p class="lead">Tudo o que você precisa saber para configurar seu Blog com Ghost.</p>
+    <p class="lead">Tudo o que você precisa saber para configurar seu Blog com o Ghost.</p>
     <p>
       <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">Clique aqui para começar</a>
     </p>
