renamed directory to /sv/ and finished installation/index.md

--- a/sv/index.html
+++ b/sv/index.html
@@ -1,7 +1,7 @@
 ---
-lang: sv_SE
+lang: sv
 layout: default
-meta_title: Getting Started with Ghost
+meta_title: Komma igång med Ghost
 ---
 
 <div id="fb-root"></div>
@@ -16,8 +16,8 @@ meta_title: Getting Started with Ghost
 
 <div class="bs-masthead">
   <div class="container">
-    <h1>The Ghost Guide</h1>
-    <p class="lead">Everything you need to know to set up a blog with Ghost.</p>
+    <h1>Ghost-guiden</h1>
+    <p class="lead">Allt du behöver veta för att starta en blogg med Ghost.</p>
     <p>
       <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">Click Here to Get Started</a>
     </p>
