Updated Traditional Chinese 'index.html' document. Signed-off-by: stzengpx <st.zengpx@gmail.com>

--- a/zh_TW/index.html
+++ b/zh_TW/index.html
@@ -16,8 +16,8 @@ meta_title: Getting Started with Ghost
 
 <div class="bs-masthead">
   <div class="container">
-    <h1>The Ghost Guide</h1>
-    <p class="lead">Everything you need to know to set up a blog with Ghost.</p>
+    <h1>Ghost 使用手冊</h1>
+    <p class="lead">用 Ghost 建立部落格時，你需要知道的事情。</p>
     <p>
       <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">Click Here to Get Started</a>
     </p>
