Initial Ghost hosted platform integration

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ meta_description: An in depth guide for working with Ghost. Install, set up, usa
     <h1>The Ghost Guide</h1>
     <p class="lead">Everything you need to know to set up a blog with Ghost.</p>
     <p>
-      <a href="{{ site.url }}/installation" class="btn btn-success btn-large">Click Here to Get Started</a>
+      <a href="{{ site.url }}/get-started" class="btn btn-success btn-large">Click Here to Get Started</a>
     </p>
   </div>
 </div>
